# tictactoe_extreme

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml  monolyth_compose.yaml  readme.md
.github/workflows/: create_container.yml  run_test.yml
client/: package-lock.json
client/src/lib/params/: guid.ts
client/src/params/: guid.ts
client/src/routes/: +page.svelte
client/src/routes/[game_id=guid]/: +page.svelte
client/src/routes/join/: +page.svelte
nginx/: nginx.conf
nginx/monolyth/: nginx.conf
src/: lib.rs  main.rs
src/client_management/: mod.rs
src/client_management/rest_api/: mod.rs  v1.rs
src/client_management/static/: mod.rs
src/client_management/websocket/: mod.rs  server.rs  stream_handler.rs
src/data_provider/: factory.rs  mod.rs
src/data_provider/providers/: cache_provider.rs  mod.rs  redis_provider.rs
src/generic/: board.rs  field.rs  game_data.rs  gamestate.rs  mod.rs  move.rs  player.rs
src/generic/boards/: board.rs  matrix_checker.rs  mod.rs  sub_board.rs
