[package]
name = "tictactoe_extreme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.4.1"
env_logger = "0.11.0"
futures-util = "0.3.30"
itertools = "0.12.0"
log = "0.4.20"
ndarray = { version = "0.15.6", features = ["serde"] }
rand = "0.8.5"
redis = "0.24.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full", "macros"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = "0.21.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }


[dev-dependencies]
testcontainers = "0.15.0"
reqwest = "0.11.23"
serial_test = "3.0.0"
# testcontainers-modules = { version = "0.3.1", features = ["redis"] }
